kube/demo1-basic_dep/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-application-martech
spec:
  selector:
    app: demo-application-martech-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
