kube/demo1-basic_dep/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-application-martech-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: demo-application-martech
              servicePort: 8080
            path: /
